--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -8,14 +8,14 @@ body {
 }
 .container {
   display: flex;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  position: relative;
-}
+   position: relative;
+} 
 
 .left-section {
   width: 75%;
-  background-color: rgba(19, 41, 75, 0.8); /* #13294B with 80% opacity */
+  background-color: rgba(19, 41, 75, 0.8); 
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -24,7 +24,7 @@ body {
 
 .right-section {
   width: 25%;
-  background-color: rgba(232, 74, 39, 0.8); /* #E84A27 with 80% opacity */
+  background-color: rgba(232, 74, 39, 0.8);
   padding: 1rem;
   display: flex;
   flex-direction: column;
