--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -9,9 +9,10 @@ body {
 }
 .container {
   display: flex;
-  height: 100%;
+  height: calc(100vh - 50px);
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .left-section {
