--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -8,9 +8,9 @@ body {
 }
 .container {
   display: flex;
-  height: 100vh;
+  height: calc(100vh - 100px);
   width: 100%;
-   position: relative;
+  position: relative;
 } 
 
 .left-section {
