--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,4 +9,5 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   font-family: "Playfair Display", serif;
+  background-color:#e4dfdf;
 }
