--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,11 +1,11 @@
-html, 
+/* html, 
 body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   font-family: "Playfair Display", serif;
-}
+} */
 .container {
   display: flex;
   height: calc(100vh - 100px);
