--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -1,12 +1,12 @@
 /* Register.css */
-html, 
+/* html, 
 body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   font-family: "Playfair Display", serif;
-}
+} */
 .container {
   display: flex;
   height: calc(100vh - 100px);
