--- a/client/src/styles/Create.css
+++ b/client/src/styles/Create.css
@@ -49,6 +49,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    color: #333;
   }
   textarea {
     min-height: 100px;
@@ -84,4 +85,26 @@ body {
   }
   .submit-button:hover {
     background-color: #c86e5b;
+  }
+  .upload-area {
+    padding: 20px;
+    border: 2px dashed #ddd;
+    text-align: center;
+    background-color: #fafafa;
+    position: relative;
+  }
+  .image-previews {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 15px;
+  }
+  .preview-image {
+      width: 100px; 
+      height: 100px;
+      object-fit: cover;
+      border: 1px solid #ddd;
+      padding: 5px;
+      border-radius: 5px;
   }
