--- a/client/src/styles/HomeSidebar.css
+++ b/client/src/styles/HomeSidebar.css
@@ -24,3 +24,13 @@
 .logo-container {
     margin-top: 1.3rem;
 }
+
+.back {
+    /* display: inline-block; */
+    margin-bottom: 20px;
+    font-size: 1.3rem;
+    color: #20457e;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
