--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -6,11 +6,12 @@ body {
   width: 100%;
   font-family: "Playfair Display", serif;
 } */
-.container {
+.contain {
   display: flex;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 50px);
   width: 100%;
   position: relative;
+  overflow: hidden;
 } 
 
 .left-section {
@@ -29,9 +30,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
+} 
 
-h1 {
+.name {
   color: white;
   font-size: 2.5rem;
   margin-bottom: 0.75rem;
@@ -45,9 +46,9 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} 
 
-h2 {
+.intro {
   text-align: center;
   color: rgba(255, 151, 145, 1); 
   font-size: 2rem;
@@ -55,13 +56,13 @@ h2 {
   margin-top: -2rem; 
 }
 
-label {
+.lbl {
   display: block;
   color: white;
   margin-bottom: 0.5rem;
 }
 
-input {
+.input-login {
   width: 100%; 
   padding: 0.75rem;
   margin-bottom: 1.5rem;
@@ -71,8 +72,12 @@ input {
   color: white;
 }
 
-button {
-  width: 100%; /* Adjusted to be responsive */
+.input-login::placeholder {
+  color: rgba(255, 255, 255, 0.522);
+}
+
+.sub-btn {
+  width: 110%;
   padding: 0.75rem;
   background-color: rgba(232, 74, 39, 0.7);
   color: white;
@@ -84,7 +89,7 @@ button {
   margin-top: 2.5rem;
 }
 
-button:hover {
+.sub-btn:hover {
   background-color: #c73d1d;
 }
 
