--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -7,9 +7,9 @@ body {
   width: 100%;
   font-family: "Playfair Display", serif;
 } */
-.container {
+.contain {
   display: flex;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 50px);
   width: 100%;
   position: relative;
   overflow: hidden;
@@ -17,7 +17,7 @@ body {
 
 .left-section {
   width: 75%;
-  background-color: rgba(19, 41, 75, 0.8); /* #13294B with 80% opacity */
+  background-color: rgba(19, 41, 75, 0.8); 
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -26,14 +26,14 @@ body {
 
 .right-section {
   width: 25%;
-  background-color: rgba(232, 74, 39, 0.8); /* #E84A27 with 80% opacity */
+  background-color: rgba(232, 74, 39, 0.8); 
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-h1 {
+.name {
   color: white;
   font-size: 2.5rem;
   margin-bottom: 0.75rem;
@@ -41,7 +41,7 @@ h1 {
 }
 
 .form-container {
-  max-width: 100%;
+  width: 400px;
   max-height: 100%;
   margin: auto;
   display: flex;
@@ -49,7 +49,7 @@ h1 {
   align-items: center;
 }
 
-h2 {
+.intro {
   text-align: center;
   color: rgba(255, 151, 145, 1); 
   font-size: 2rem;
@@ -57,13 +57,13 @@ h2 {
   margin-top: -2rem; 
 }
 
-label {
+.lbl {
   display: block;
   color: white;
   margin-bottom: 0.5rem;
 }
 
-input {
+.input-reg {
   width: 100%; 
   padding: 0.75rem;
   margin-bottom: 1.5rem;
@@ -72,9 +72,12 @@ input {
   border-radius: 10px;
   color: white;
 }
+.input-reg::placeholder {
+  color: rgba(255, 255, 255, 0.522);
+}
 
-button {
-  width: 100%; /* Adjusted to be responsive */
+.bttn {
+  width: 110%;
   padding: 0.75rem;
   background-color: rgba(232, 74, 39, 0.7);
   color: white;
@@ -86,7 +89,7 @@ button {
   margin-top: 2.5rem;
 }
 
-button:hover {
+.bttn:hover {
   background-color: #c73d1d;
 }
 
@@ -101,10 +104,12 @@ button:hover {
 
 .sign-options {
   text-align: center;
-  margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
+  margin-top: 2rem;
 }
 
-.sign-options span {
-  margin-left: 0.5rem
+.sign-in {
+  color: white;
+  text-decoration: none;
+  /* font-weight: bold; */
+  transition: color 0.3s ease, transform 0.3s ease;
 }
